--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Nora Hammenberg" />
-    
+    <meta name="google-site-verification" content="dn3SFGBDdJCrtIbDphfMSHLT9Wcl5ntcXNtz1nROkK8" />
     <meta name="description" content="Front-end web developer Nora Hammenberg's portfolio."/>
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
